# rust_alarm

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: manual-testing.md  releases.md
docs-site/: index.md  package-lock.json  package.json  vitest.config.ts
docs-site/.vitepress/: config.mts
docs-site/.vitepress/theme/: custom.css  index.ts
docs-site/.vitepress/theme/components/: TerminalTimer.test.ts  TerminalTimer.vue
docs-site/development/: releases.md  testing.md
docs-site/guide/: configuration.md  installation.md  scheduling.md  usage.md
docs-site/reference/: commands.md  controls.md  duration-formats.md
docs/superpowers/plans/: 2026-06-10-cross-platform-alarm-modernization.md  2026-06-10-documentation-site.md  2026-06-10-github-release-automation.md  2026-06-10-interactive-timer-demo.md  2026-06-10-wall-clock-and-text-scheduling.md
docs/superpowers/specs/: 2026-06-10-cross-platform-alarm-modernization-design.md  2026-06-10-documentation-site-design.md  2026-06-10-github-release-automation-design.md  2026-06-10-interactive-timer-demo-design.md  2026-06-10-wall-clock-and-text-scheduling-design.md
scripts/: package-release.sh  release-version.sh  set-release-version.sh  test-package-release.sh  test-release-version.sh  test-set-release-version.sh
src/: app.rs  audio.rs  cli.rs  config.rs  display.rs  fonts.rs  lib.rs  main.rs  notification.rs  schedule.rs  timer.rs
tests/: cli.rs
