[package]
name = "alarm-clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native-audio"]
native-audio = ["dep:rodio"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ctrlc = "3"
directories = "6"
iana-time-zone = "0.1"
inquire = "0.9"
notify-rust = "4"
regex = "1"
rodio = { version = "0.21", features = ["playback", "symphonia-all"], optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tempfile = "3"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
