[package]
name = "clck"
version = "0.1.8"
edition = "2021"
description = "A responsive cross-platform countdown alarm for the terminal."
license = "MIT"
repository = "https://github.com/gkk-dev-ops/clck"
readme = "README.md"
keywords = ["alarm", "timer", "clock", "cli", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "clck"
path = "src/main.rs"

[features]
default = ["native-audio"]
native-audio = ["dep:rodio"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ctrlc = "3"
directories = "6"
iana-time-zone = "0.1"
inquire = "0.9"
notify-rust = "4"
regex = "1"
rodio = { version = "0.21", features = ["playback", "symphonia-all"], optional = true }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tempfile = "3"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2"
libc = "0.2"
predicates = "3"
